k8s/dev/03-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-app-deployment
spec:
  selector:
    matchLabels:
      app: k8s-app
  template:
    metadata:
      labels:
        app: k8s-app
    spec:
      containers:
      - name: k8s-app
        image: kvncont/k8s-app:0.1.0
        resources:
          requests:
            memory: 128Mi
            cpu: 200m
          limits:
            memory: 512Mi
            cpu: 500m
        ports:
        - containerPort: 8080
