k8s/dev/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-app-service
spec:
  selector:
    app: k8s-app
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
