k8s/dev/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-app-service
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  selector:
    app: k8s-app
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
