k8s/dev/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-app-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
spec:
  rules:
  - http:
      paths:
      - path: /k8s-app/*
        backend:
          service:
            name: k8s-app-service
            port:
              number: 80
        pathType: Prefix
